# organizer

./: .clineignore  .dockerignore  .env.example  .gitignore  1.json  CLAUDE.md  Dockerfile  README.md  justfile  pyproject.toml
.clinerules/: doc.md
.github/: dependabot.yml
.github/workflows/: test.yml
app/: main.py  main_test.py
app/agents/: ai.py  ai_test.py  categorizer.py  categorizer_test.py  models.py  movie_mover.py  movie_mover_test.py  oldcategorizer.py  oldcategorizer_test.py  porn_is_vr.py  porn_is_vr_test.py  porn_jav.py  porn_per_file.py  porn_runner.py  runner.py  runner_test.py  tv_series_mover.py  tv_series_mover_test.py
app/agents/categorizer/: decision_maker.py  is_audio_book.py  is_audio_book_test.py  is_bango_porn.py  is_bango_porn_test.py  is_book.py  is_book_test.py  is_movie.py  is_movie_test.py  is_music.py  is_music_test.py  is_music_video.py  is_music_video_test.py  is_photobook.py  is_photobook_test.py  is_porn.py  is_porn_test.py  is_tv_series.py  is_tv_series_test.py  manual_categorizer.py  manual_categorizer_test.py  models.py  runner.py
app/agents/mover/: bango_porn_mover.py  bango_porn_mover_test.py  jav_actor.py  jav_actor_test.py  movie_mover.py  movie_mover_test.py  porn_mover.py  runner.py  simple_mover.py  simple_mover_test.py  subtitle_mover.py  tv_series_mover.py  tv_series_mover_test.py  utils.py
app/agents/replan_with_hints/: __init__.py  replan_agent.py
app/agents/utils/: porn.py  porn_test.py  utils.py  utils_test.py
