[project]
name = "organizer"
license = "Apache-2.0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "beautifulsoup4>=4.14.2",
  "fastapi[standard]>=0.117.1",
  "filelock>=3.20.0",
  "iso639-lang>=2.6.3",
  "logfire[fastapi]>=4.14.2",
  "pydantic-ai>=1.2.0",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "requests>=2.32.5",
]

[tool.ruff]
line-length = 100
indent-width = 2
target-version = "py313"

[tool.ruff.lint]
unfixable = []
per-file-ignores = {}

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
